--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ actix-web-lab = "^0.19"
 juniper = "0.15"
 env_logger = "^0.10"
 log = "^0.4"
+chrono = "^0.4"
+serde = "1.0.171"
+serde_json = "1.0.103"
 
