--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ actix-web-lab = "^0.19"
 juniper = "0.15"
 env_logger = "^0.10"
 log = "^0.4"
-chrono = "^0.4"
+chrono = { version = "^0.4", features = ["serde"] }
 serde = "1.0.171"
 serde_json = "1.0.103"
+firestore = "0.32"
+dataloader = "0.12"
+async-trait = "0.1.30"
 
